removed deprecation, imports optimized, refactored logical conditions

--- a/lstm-visualisation.ipynb
+++ b/lstm-visualisation.ipynb
@@ -9,33 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/djab/OPIUM/Blogposty/InzynierkaMirka/mirek/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n",
-      "/home/djab/OPIUM/Blogposty/InzynierkaMirka/mirek/lib/python3.5/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>.container { width:90% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "from misc.misc import *\n",
@@ -78,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "from keras.utils import plot_model\n",
@@ -180,13 +158,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "act = lstm_activations.predict(X_train)\n",
     "labels = le.inverse_transform(np.argmax(Y_train, axis=1))\n",
     "set_labels = sorted(set(labels))\n",
-    "plot_2D(set_labels, encoded2D, act, labels, 'LSTM Activations', 'lstm2d_last_activation.png', -3, 3.2, -2.6, 3.3, \n",
+    "plot_2D(set_labels, encoded2D, act, labels, 'Last activations from LSTM layer', 'lstm2d_last_activation.png', -3, 3.2, -2.6, 3.3, \n",
     "        figsize=(10.3,10.3), frac_labels=0.00, linewidth=1, pointsize=5, fontsize=12, linealpha=0.05, min_steps=89, max_steps=90, show=True, log=True,\n",
     "        colormap=cm.coolwarm, scatter=True, colorbar_show=False)"
    ]
@@ -209,8 +189,7 @@
    "outputs": [],
    "source": [
     "plot_3D(set_labels, encoded3D, act, labels, 'LSTM Activations 3D', 'lstm3d.png', x_l=-2.5,\n",
-    "            x_h=2.5, y_l=-2.5, y_h=2.5, figsize=(13, 13), frac_labels=0.5,\n",
-    "            linewidth=1, pointsize=5, fontsize=5, max_steps=90,\n",
+    "            x_h=2.5, y_l=-2.5, y_h=2.5, figsize=(13, 13), pointsize=5, max_steps=90,\n",
     "            show=True, log=True)"
    ]
   },
@@ -247,9 +226,9 @@
    "outputs": [],
    "source": [
     "set_labels = sorted(set(labels))\n",
-    "# set_labels = ['drink', 'danger'] # dangerous tak naprawdę zamiast danger\n",
+    "# set_labels = ['drink', 'danger'] # should be dangerous instead of danger\n",
     "one_hand = np.array(side) < 0.25\n",
-    "plot_2D(set_labels, encoded2D, act, labels, 'LSTM Activations', 'lstm2d_hands.png', -3, 3.2, -2.6, 3.3, \n",
+    "plot_2D(set_labels, encoded2D, act, labels, 'Activation paths categorized by hand usage', 'lstm2d_hands.png', -3, 3.2, -2.6, 3.3, \n",
     "        figsize=(10.3,10.3), frac_labels=0.0, linewidth=2, pointsize=3, fontsize=12, linealpha=0.05, \n",
     "        max_steps=90, show=True, log=True, hand=one_hand, colormap=cm.Greys, scatter=False, colorbar_show=False)"
    ]
@@ -261,7 +240,7 @@
    "outputs": [],
    "source": [
     "set_labels = ['drink', 'danger'] # dangerous tak naprawdę zamiast danger\n",
-    "plot_2D(set_labels, encoded2D, act, labels, 'LSTM Activations', 'lstm2d_drink_danger.png', -3, 3.2, -2.6, 3.3, \n",
+    "plot_2D(set_labels, encoded2D, act, labels, 'LSTM activations for drink and danger', 'lstm2d_drink_danger.png', -3, 3.2, -2.6, 3.3, \n",
     "    figsize=(13,10), frac_labels=0.4, linewidth=1, pointsize=5, fontsize=12, linealpha=0.05, max_steps=90, show=True, log=True)"
    ]
   },
@@ -272,7 +251,7 @@
    "outputs": [],
    "source": [
     "set_labels = ['who', 'soon']\n",
-    "plot_2D(set_labels, encoded2D, act, labels, 'LSTM Activations', 'lstm2d_who_soon.png', -3, 3.2, -2.6, 3.3, \n",
+    "plot_2D(set_labels, encoded2D, act, labels, 'LSTM activations for who and soon', 'lstm2d_who_soon.png', -3, 3.2, -2.6, 3.3, \n",
     "    figsize=(13,10), frac_labels=0.1, linewidth=1, pointsize=5, fontsize=12, linealpha=0.05, max_steps=90, show=True, log=True)"
    ]
   },
@@ -283,7 +262,7 @@
    "outputs": [],
    "source": [
     "set_labels = ['crazy', 'think']\n",
-    "plot_2D(set_labels, encoded2D, act, labels, 'LSTM Activations', 'lstm2d_think_crazy.png', -3, 3.2, -2.6, 3.3, \n",
+    "plot_2D(set_labels, encoded2D, act, labels, 'LSTM activations for think and crazy', 'lstm2d_think_crazy.png', -3, 3.2, -2.6, 3.3, \n",
     "    figsize=(13,10), frac_labels=0.1, linewidth=1, pointsize=5, fontsize=12, linealpha=0.05, max_steps=90, show=True, log=True)"
    ]
   },
@@ -294,7 +273,7 @@
    "outputs": [],
    "source": [
     "set_labels = ['sorry', 'crazy', 'you', 'think']\n",
-    "plot_2D(set_labels, encoded2D, act, labels, 'LSTM Activations', 'lstm2d_you.png', -3, 3.2, -2.6, 3.3, \n",
+    "plot_2D(set_labels, encoded2D, act, labels, 'LSTM activations for think, crazy, sorry and you', 'lstm2d_you.png', -3, 3.2, -2.6, 3.3, \n",
     "    figsize=(13,10), frac_labels=0.2, linewidth=1, pointsize=5, fontsize=12, linealpha=0.05, max_steps=90, show=True, log=True)"
    ]
   },
@@ -396,7 +375,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "act = lstm_activations.predict(X_train)\n",
@@ -427,9 +408,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
